// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with multiple expenses 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        23
      </span>
       
      expenses
       totaling 
      <span>
        $13,947,987,298.34
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="button button--action"
        replace={false}
        to="/create/expense"
      >
        Add Expense
      </Link>
      <Link
        className="button button--action"
        replace={false}
        to="/budgets"
      >
        View Budgets
      </Link>
    </div>
  </div>
</div>
`;

exports[`should correctly render ExpensesSummary with one expense 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        1
      </span>
       
      expense
       totaling 
      <span>
        $2.35
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="button button--action"
        replace={false}
        to="/create/expense"
      >
        Add Expense
      </Link>
      <Link
        className="button button--action"
        replace={false}
        to="/budgets"
      >
        View Budgets
      </Link>
    </div>
  </div>
</div>
`;
